<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="test_tag_fab">FAB</string>
</resources>