...
                modifier = Modifier.weight(1f)
            )
        }
        Slider(
            modifier = Modifier
                .fillMaxWidth()
                .testTag("SLIDER_TEMPERATURE"),
            value = temperature.value,
            onValueChange = { updateTemperature(it) },
            valueRange = 0.0f..1.0f,
            colors = SliderDefaults.colors(
                activeTickColor = Color.Transparent,
                inactiveTickColor = Color.Transparent,
...
